--- a/css/style.css
+++ b/css/style.css
@@ -177,6 +177,53 @@ h1 {
   margin-top: 80px;
   margin-bottom: 80px;
 }
+.header_text {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	position: relative;
+	min-height: 200px;
+}
+.header_text .container {
+	flex-direction: column;
+}
+.header_title {
+	font-weight: 300;
+	font-size: 60px;
+	line-height: 130%;
+	text-align: center;
+	color: black;
+}
+.header_subtitle {
+	letter-spacing: 4px;
+	color: black;
+  text-align: center;
+}
+.about {
+	padding: 75px 0;
+	scroll-margin-top: -200px;
+}
+.about_container {
+	display: flex;
+	align-items: center;
+	gap: 20px;
+}
+.about_text {
+	font-weight: 300;
+	font-size: 25px;
+	line-height: 130%;
+	margin-top: 10px;
+}
+.about_text span {
+	font-weight: 600;
+}
+.about_title {
+	font-weight: 700;
+	font-size: 50px;
+	letter-spacing: 0.06em;
+	text-transform: uppercase;
+}
+
 .footer-dark {
   padding: 50px 0;
   color: #f0f9ff;
@@ -265,4 +312,96 @@ h1 {
   opacity: 0.3;
   font-size: 13px;
   margin-bottom: 0;
+}
+/*adaptiv*/
+@media (max-width: 576px) {
+	.menu_icon {
+		display: block;
+	}
+	.menu_list {
+		position: absolute;
+		top: 0;
+		left: 0;
+		background-color: rgb(255, 229, 209);
+		width: 100%;
+		height: 100vh;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		transform: translateX(-100%);
+	}
+	.menu_link, .about_title  {
+		font-size: 30px;
+	}
+	.header_title {
+		font-size: 80px;
+	}
+	.header_subtitle {
+		font-size: 35px;
+	}
+	.about_text {
+		font-size: 20px;
+	}
+	.skills_title {
+		font-size: 35px;
+	}
+	.skills_text {
+		font-size: 20px;
+	}
+}
+
+@media (max-width: 768px) {
+	.header_title {
+		font-size: 35px;
+	}
+	.header_subtitle {
+		font-size: 15px;
+	}
+	.about {
+		scroll-margin-top: -45px;
+	}
+	.about_title {
+		font-size: 40px;
+	}
+	.about_text {
+		font-size: 25px;
+	}
+	.skills_title {
+		font-size: 35px;
+	}
+	.skills_text {
+		font-size: 20px;
+	}
+}
+
+@media (max-width: 375px) {
+	.header_title {
+		font-size: 35px;
+	}
+	.header_subtitle {
+		font-size: 15px;
+		text-align: center;
+	}
+	.about {
+		scroll-margin-top: -45px;
+	}
+	.footer_title {
+		font-size: 35px;
+	}
+}
+
+@media (max-width: 992px) {
+	.about {
+		scroll-margin-top: -45px;
+	}
+	.about_gallery{
+		display: flex;
+		align-items: stretch;
+		justify-content: center;
+		flex-wrap: wrap;
+		flex-direction: row;
+	}
+	.about_container {
+		flex-direction: column;
+	}
 }
